--- a/package.json
+++ b/package.json
@@ -21,10 +21,17 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "file-stream-rotator": "^0.5.7",
+    "fs": "*",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
+    "morgan": "^1.10.0",
+    "path": "^0.12.7",
+    "rotating-file-stream": "^2.1.5",
     "stripe": "^8.145.0",
+    "swagger-jsdoc": "5.0.1",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^13.6.0"
   },
   "devDependencies": {
